GC和内存分配